--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
+    "axios": "^0.17.0",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
+    "draft-js": "^0.10.4",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^4.2.2",
+    "semantic-ui-react": "^0.76.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.4"
